# breadforge

./: .breadforge-scope  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pipeline.yml
agents/: ledger.py  runner.py  test_runner.py
docs/: breadforge-loop.drawio
specs/: TEMPLATE.md  breadforge-v0.3.0.md  minesweeper-v0.1.0.md
src/breadforge/: __init__.py  assessor.py  beads.py  cli.py  config.py  dispatch.py  forge.py  health.py  logger.py  merge.py  monitor.py  runner.py  spec.py
src/breadforge/agents/: __init__.py  assessor.py  prompts.py  runner.py
src/breadforge/backends/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
src/breadforge/beads/: __init__.py  store.py  types.py
src/breadforge/forge/: __init__.py  drafter.py  interview.py  main.py  validator.py
standards/: code.md  commits.md  issues.md  prs.md  tests.md  validation.md
tests/: test_consensus.py  test_credential_proxy.py  test_multi_backend.py  test_research_pipeline.py  test_wait_handler.py
tests/integration/: test_dispatch.py  test_handlers.py
tests/unit/: test_assessor.py  test_assessor_extended.py  test_beads.py  test_bug_handler.py  test_cli.py  test_cli_bot.py  test_cli_validate_status.py  test_config.py  test_detect.py  test_executor.py  test_executor_extended.py  test_graph_builder_validate.py  test_graph_node.py  test_health.py  test_health_extended.py  test_lock.py  test_logger.py  test_monitor.py  test_monitor_loop.py  test_node.py  test_prompts.py  test_spec.py  test_spec_extended.py  test_validate_handler.py
(+24 files in other folders)
